--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Below is summary of what I do.</p>
+						<p>Below is a summary of what I do.</p>
 					</header>
 
 					<!-- Gallery  -->
